# compound_ai_agentic_system

./: README.md  _config.yml  pyproject.toml
assets/: Compound AI System.drawio
berkley_hack/: pyproject.toml
berkley_hack/src/berkley_hack/: __init__.py
src/: agent_storage.db  agents.py  app.py  experiment.ipynb  final.ipynb  gradio.ipynb  utils.py
src/examples/: langsmith_tracing_example.py
src/notebooks/: experiment.ipynb  final.ipynb  gradio.ipynb
