[project]
name = "berkley-hack"
version = "0.1.0"
description = "LLM agents hackathon."
readme = "README.md"
authors = [
    { name = "shamik", email = "39588365+Shamik-07@users.noreply.github.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.3.1",
    "dspy>=2.5.20",
    "langchain-core>=0.3.14",
    "langchain-openai>=0.2.4",
    "langsmith>=0.1.138",
    "openai>=1.52.2",
]


[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "pytest>=8.3.3",
]

[tool.ruff.lint]
select = [
    "C", "E", "F", "I", "B", "Q", "W", "UP", "W291", "I001", "F401" 
]
fixable = ["ALL"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 50