[project]
name = "berkley-hack"
version = "0.1.0"
description = "LLM agents hackathon."
readme = "README.md"
authors = [
    { name = "shamik", email = "39588365+Shamik-07@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=6.3.3",
    "fastapi[standard]>=0.115.4",
    "google-generativeai>=0.8.3",
    "googlesearch-python>=1.2.5",
    "gradio>=5.7.0",
    "lxml-html-clean>=0.3.1",
    "newspaper4k>=0.9.3.1",
    "openai>=1.52.2",
    "phidata>=2.5.30",
    "pycountry>=24.6.1",
    "sqlalchemy>=2.0.36",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.48",
]


[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "pip>=24.3.1",
    "pytest>=8.3.3",
    "langchain-core>=0.3.14",
    "langchain-openai>=0.2.4",
]

[tool.ruff.lint]
select = [
    "C", "E", "F", "I", "B", "Q", "W", "UP", "W291", "I001", "F401"
]
fixable = ["ALL"]

[tool.ruff]
line-length = 88


[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["ALL"]



[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 50
