[project]
name = "berkley-hack"
version = "0.1.0"
description = "LLM agents hackathon."
readme = "README.md"
authors = [
    { name = "shamik", email = "39588365+Shamik-07@users.noreply.github.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "autogen>=0.3.1",
    "dspy>=2.5.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
